OWH-219: fix column alignment, getting e2e tests passing

--- a/software/owh/client/app/css/app.css
+++ b/software/owh/client/app/css/app.css
@@ -1023,3 +1023,15 @@ body {
     border-left:none;
     margin-left:-4px;
 }
+
+/* YRBS Table */
+
+.owh-question__expand {
+    float: right;
+    color: white;
+}
+
+.owh-question__title {
+    background-color: #833eb0;
+    color: white;
+}
